Fixed some spacing and added videos

--- a/websiteStyle.css
+++ b/websiteStyle.css
@@ -1,11 +1,11 @@
+*{
+	margin:0px;
+}
 h2,h4{
 	font-family:"Rock Salt", cursive;
 }
 p,ul{
 	font-family:"Shadows Into Light Two", monospace;
-}
-body{
-	margin:0px;
 }
 .header{
 	align-items:center;
@@ -38,14 +38,16 @@ body{
 	}	
 }
 .groupSocialMedia{
-	background-color:#F55B8A;
-	float:left;
 	text-align:center;
+	display:flex;
 }
 .groupSocialMedia .listGSM {
 	list-style:none;
 	margin:0px;
 	padding:0px;
+	position:absolute;
+	left:0px;
+	background-color:#F55B8A;
 }
 .groupSocialMedia .logo2 {
 	width:50px;
